# OperationsCalendarAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  run_reminders.py  sitecustomize.py  start.bat  start_streamlit.bat  test_dify.py  test_ocr.py  test_pipeline.py  vercel.json
.streamlit/: secrets.example.toml
app/: db.py  storage.py  ui.py
app/services/: dify_client.py  notifier.py  pdf_parser.py
archive/: templates_route.py
docs/: PRD.md
local_ocr_plan_b/: README.md  start_local_ocr.bat
pages/: 1_Import_Notification.py  2_Pre_Registration.py
public/: page.html  styles.css
public/js/: ack.js  app.js  auth.js  email-settings.js  history.js  import.js  notice-form.js  overview.js  plans.js  shared.js
src/storenotificationcircula/api/: main.py
src/storenotificationcircula/api/routes/: acknowledgements.py  auth.py  email_settings.py  notifications.py  plans.py  reminders.py
src/storenotificationcircula/core/: config.py
src/storenotificationcircula/db/: database.py
src/storenotificationcircula/services/: ack.py  auth.py  dify_client.py  notifier.py  pdf_parser.py  reminders.py  storage.py
src/storenotificationcircula/services/email/: __init__.py  providers.py  sender.py  settings.py
src/storenotificationcircula/services/llm/: __init__.py  claude_client.py  dify_client.py  extractor.py  schema.py
src/storenotificationcircula/ui/: overview_dashboard.py  streamlit_ui.py
streamlit_demo/: main.py  streamlit_app.py
streamlit_demo/pages/: 1_Import_Notification.py  2_Pre_Registration.py
(+2 files in other folders)
