[project]
name = "storenotificationcircula"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "onnxruntime<=1.20.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "supabase>=2.0.0",
    "uvicorn>=0.47.0",
    "websockets<15",
]
