[project]
name = "storenotificationcircula"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
]

[project.optional-dependencies]
local-ocr = [
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0.84",
    "onnxruntime<=1.20.1",
    "rapidocr-onnxruntime>=1.4.4",
]

[tool.vercel]
entrypoint = "src.storenotificationcircula.api.main:app"
